adding vector store

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 streamlit
 chromadb
-llama-index-embeddings-huggingface
+langgraph 
+#langchain_openai 
+langchain_community 
+langchain_core 
+#tavily-python 
+#wikipedia
+langchain-anthropic
+#langchain-google-genai
